--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Character Counter</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <label for="texInput">Enter Text: </label>
-<input type="text" id="texInput" maxlength="50" placeholder="Enter The text">
-<p>Remaining Chart : <span></span></p>
+    <input type="text" id="texInput" maxlength="50" placeholder="Enter the text">
+    <p>Characters Remaining: <span id="charCount">50</span></p>
 
     <script src="./script.js"></script>
 </body>
